# bidsconvert

./: .gitattributes  Dockerfile  MANIFEST.in  README.md  setup.cfg  setup.py
bidsconvert/: __about__.py  _version.py
bidsconvert/cli/: bidsconvert.py
bidsconvert/utils/: anonymization.py  cleanup.py  metadata.py
